# tracing-defmt

./: Cargo.toml  README.md  REFACTORING.md  TODO.md  shell.nix
.github/workflows/: ci.yml
decoder/: Cargo.toml
decoder/src/: lib.rs
examples/: basic.rs  host_trace_reconstructor.rs
macros/: Cargo.toml
macros/src/: lib.rs
npins/: sources.json
src/: lib.rs
tests/: compile_test.rs  reconstruction.rs
